// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchInput icon only should match snapshot 1`] = `
<div
  className="search--container hidden eCubN"
  onBlur={[Function]}
  onFocus={[Function]}
>
  <button
    aria-label="Search button"
    className="search--search-icon dcLsgt"
    onClick={[Function]}
  >
    <svg
      className="gxyxth"
      height="24"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <g
        fill="none"
        fillRule="evenodd"
      >
        <path
          d="M24 0H0v24h24z"
        />
        <path
          d="M18 9.5a8.5 8.5 0 1 0-17 0 8.5 8.5 0 0 0 17 0zm-1.438 6.355l7.292 7.291a.5.5 0 0 1-.708.708l-7.291-7.292a9.5 9.5 0 1 1 .707-.707z"
          fill="currentColor"
          fillRule="nonzero"
        />
      </g>
    </svg>
  </button>
  <input
    aria-label="Search input"
    autoComplete="off"
    className="search--input dykHyd"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    placeholder="Search Demo"
    type="text"
    value=""
  />
  <button
    aria-label="Clear button"
    className="search--clear-icon eyAPzR"
    onClick={[Function]}
    value=""
  >
    <svg
      height="24"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <g
        fill="none"
        fillRule="evenodd"
      >
        <path
          d="M0 0h24v24H0z"
        />
        <path
          d="M12 22c5.523 0 10-4.477 10-10S17.523 2 12 2 2 6.477 2 12s4.477 10 10 10zm0 1C5.925 23 1 18.075 1 12S5.925 1 12 1s11 4.925 11 11-4.925 11-11 11zm3.89-15.596a.5.5 0 0 1 .706.707l-8.485 8.485a.5.5 0 0 1-.707-.707l8.485-8.485zm-8.486.707a.5.5 0 0 1 .707-.707l8.485 8.485a.5.5 0 0 1-.707.707L7.404 8.111z"
          fill="currentColor"
          fillRule="nonzero"
        />
      </g>
    </svg>
  </button>
  <button
    aria-label="Cancel button"
    className="search--cancel-icon hTwZwm"
    onClick={[Function]}
  >
    Cancel
  </button>
</div>
`;

exports[`SearchInput large should match snapshot 1`] = `
<div
  className="search--container kiWaFZ"
  onBlur={[Function]}
  onFocus={[Function]}
>
  <button
    aria-label="Search button"
    className="search--search-icon dcLsgt"
    onClick={[Function]}
  >
    <svg
      className="gxyxth"
      height="24"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <g
        fill="none"
        fillRule="evenodd"
      >
        <path
          d="M24 0H0v24h24z"
        />
        <path
          d="M18 9.5a8.5 8.5 0 1 0-17 0 8.5 8.5 0 0 0 17 0zm-1.438 6.355l7.292 7.291a.5.5 0 0 1-.708.708l-7.291-7.292a9.5 9.5 0 1 1 .707-.707z"
          fill="currentColor"
          fillRule="nonzero"
        />
      </g>
    </svg>
  </button>
  <input
    aria-label="Search input"
    autoComplete="off"
    className="search--input dykHyd"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    placeholder="Search Demo"
    type="text"
    value=""
  />
  <button
    aria-label="Clear button"
    className="search--clear-icon eyAPzR"
    onClick={[Function]}
    value=""
  >
    <svg
      height="24"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <g
        fill="none"
        fillRule="evenodd"
      >
        <path
          d="M0 0h24v24H0z"
        />
        <path
          d="M12 22c5.523 0 10-4.477 10-10S17.523 2 12 2 2 6.477 2 12s4.477 10 10 10zm0 1C5.925 23 1 18.075 1 12S5.925 1 12 1s11 4.925 11 11-4.925 11-11 11zm3.89-15.596a.5.5 0 0 1 .706.707l-8.485 8.485a.5.5 0 0 1-.707-.707l8.485-8.485zm-8.486.707a.5.5 0 0 1 .707-.707l8.485 8.485a.5.5 0 0 1-.707.707L7.404 8.111z"
          fill="currentColor"
          fillRule="nonzero"
        />
      </g>
    </svg>
  </button>
  <button
    aria-label="Cancel button"
    className="search--cancel-icon hTwZwm"
    onClick={[Function]}
  >
    Cancel
  </button>
</div>
`;

exports[`SearchInput small should match snapshot 1`] = `
<div
  className="search--container gAMRvB"
  onBlur={[Function]}
  onFocus={[Function]}
>
  <button
    aria-label="Search button"
    className="search--search-icon dcLsgt"
    onClick={[Function]}
  >
    <svg
      className="gxyxth"
      height="16"
      viewBox="0 0 16 16"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <g
        fill="none"
        fillRule="evenodd"
      >
        <path
          d="M16 0H0v16h16z"
        />
        <path
          d="M12 6.5a5.5 5.5 0 1 0-11 0 5.5 5.5 0 0 0 11 0zm-.564 4.229l4.418 4.417a.5.5 0 0 1-.708.708l-4.417-4.418a6.5 6.5 0 1 1 .707-.707z"
          fill="currentColor"
          fillRule="nonzero"
        />
      </g>
    </svg>
  </button>
  <input
    aria-label="Search input"
    autoComplete="off"
    className="search--input kUmVk"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    placeholder="Search Demo"
    type="text"
    value="test"
  />
  <button
    aria-label="Clear button"
    className="search--clear-icon fFGyfL"
    onClick={[Function]}
    value="test"
  >
    <svg
      height="24"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <g
        fill="none"
        fillRule="evenodd"
      >
        <path
          d="M0 0h24v24H0z"
        />
        <path
          d="M12 22c5.523 0 10-4.477 10-10S17.523 2 12 2 2 6.477 2 12s4.477 10 10 10zm0 1C5.925 23 1 18.075 1 12S5.925 1 12 1s11 4.925 11 11-4.925 11-11 11zm3.89-15.596a.5.5 0 0 1 .706.707l-8.485 8.485a.5.5 0 0 1-.707-.707l8.485-8.485zm-8.486.707a.5.5 0 0 1 .707-.707l8.485 8.485a.5.5 0 0 1-.707.707L7.404 8.111z"
          fill="currentColor"
          fillRule="nonzero"
        />
      </g>
    </svg>
  </button>
  <button
    aria-label="Cancel button"
    className="search--cancel-icon hTwZwm"
    onClick={[Function]}
  >
    Cancel
  </button>
</div>
`;

exports[`SearchSuggest should match snapshot 1`] = `
<div
  className="edMyei"
/>
`;
